--- a/css/_mixins_project.scss
+++ b/css/_mixins_project.scss
@@ -8,7 +8,7 @@
 @mixin svg-icon-flag {
 	display: inline-block;
 	vertical-align: middle;
-    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="14" height="10" viewBox="0 0 14 10"><defs><style>.cls-1 {fill: #f8615a; fill-rule: evenodd; } </style> </defs> <path d="M10.758,0.571 C10.537,0.214 10.095,-0.001 9.579,-0.001 L1.474,-0.001 C0.663,-0.001 -0.000,0.642 -0.000,1.428 L-0.000,8.571 C-0.000,9.356 0.663,9.999 1.474,9.999 L9.579,9.999 C10.095,9.999 10.537,9.785 10.758,9.428 L14.000,4.999 L10.758,0.571 ZM9.579,8.571 L1.474,8.571 L1.474,1.428 L9.579,1.428 L12.158,4.999 L9.579,8.571 Z" class="cls-1"/> </svg>') center no-repeat;
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="14" height="10" viewBox="0 0 14 10"><defs><style>.cls-1 {fill: %23f8615a; fill-rule: evenodd; } </style> </defs> <path d="M10.758,0.571 C10.537,0.214 10.095,-0.001 9.579,-0.001 L1.474,-0.001 C0.663,-0.001 -0.000,0.642 -0.000,1.428 L-0.000,8.571 C-0.000,9.356 0.663,9.999 1.474,9.999 L9.579,9.999 C10.095,9.999 10.537,9.785 10.758,9.428 L14.000,4.999 L10.758,0.571 ZM9.579,8.571 L1.474,8.571 L1.474,1.428 L9.579,1.428 L12.158,4.999 L9.579,8.571 Z" class="cls-1"/> </svg>') center no-repeat;
     width: 14px;
     height: 10px;
 }
@@ -16,7 +16,7 @@
 @mixin svg-icon-watch {
 	display: inline-block;
 	vertical-align: middle;
-    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="14" height="14" viewBox="0 0 14 14">  <defs>    <style>      .cls-1 {        fill: #f8615a;        fill-rule: evenodd;      }    </style>  </defs>  <path d="M7.000,13.999 C3.150,13.999 -0.000,10.849 -0.000,6.999 C-0.000,3.149 3.150,-0.001 7.000,-0.001 C10.850,-0.001 14.000,3.149 14.000,6.999 C14.000,10.849 10.850,13.999 7.000,13.999 ZM7.000,1.400 C3.920,1.400 1.400,3.919 1.400,6.999 C1.400,10.079 3.920,12.599 7.000,12.599 C10.080,12.599 12.600,10.079 12.600,6.999 C12.600,3.919 10.080,1.400 7.000,1.400 ZM6.300,7.699 L6.300,3.499 L7.350,3.499 L7.350,7.139 L10.500,9.030 L9.940,9.940 L6.300,7.699 Z" class="cls-1"/></svg>') center no-repeat;
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="14" height="14" viewBox="0 0 14 14">  <defs>    <style>      .cls-1 {        fill: %23f8615a;        fill-rule: evenodd;      }    </style>  </defs>  <path d="M7.000,13.999 C3.150,13.999 -0.000,10.849 -0.000,6.999 C-0.000,3.149 3.150,-0.001 7.000,-0.001 C10.850,-0.001 14.000,3.149 14.000,6.999 C14.000,10.849 10.850,13.999 7.000,13.999 ZM7.000,1.400 C3.920,1.400 1.400,3.919 1.400,6.999 C1.400,10.079 3.920,12.599 7.000,12.599 C10.080,12.599 12.600,10.079 12.600,6.999 C12.600,3.919 10.080,1.400 7.000,1.400 ZM6.300,7.699 L6.300,3.499 L7.350,3.499 L7.350,7.139 L10.500,9.030 L9.940,9.940 L6.300,7.699 Z" class="cls-1"/></svg>') center no-repeat;
     width: 14px;
     height: 14px;
 }
@@ -24,7 +24,7 @@
 @mixin svg-icon-share {
 	display: inline-block;
 	vertical-align: middle;
-    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="14" height="14" viewBox="0 0 14 14">  <defs>    <style>      .cls-1 {        fill: #f8615a;        fill-rule: evenodd;      }    </style>  </defs>  <path d="M11.601,9.123 C10.917,9.123 10.303,9.415 9.866,9.883 L4.765,7.342 C4.782,7.223 4.794,7.102 4.794,6.978 C4.794,6.856 4.783,6.738 4.766,6.622 L9.860,4.109 C10.297,4.580 10.915,4.876 11.601,4.876 C12.925,4.876 13.998,3.784 13.998,2.438 C13.998,1.091 12.925,0.000 11.601,0.000 C10.278,0.000 9.205,1.091 9.205,2.438 C9.205,2.559 9.216,2.677 9.233,2.793 L4.139,5.306 C3.702,4.835 3.085,4.540 2.398,4.540 C1.074,4.540 0.001,5.631 0.001,6.978 C0.001,8.324 1.074,9.415 2.398,9.415 C3.082,9.415 3.696,9.123 4.133,8.656 L9.234,11.196 C9.217,11.315 9.205,11.436 9.205,11.561 C9.205,12.907 10.278,13.998 11.601,13.998 C12.925,13.998 13.998,12.907 13.998,11.561 C13.998,10.214 12.925,9.123 11.601,9.123 Z" class="cls-1"/></svg>') center no-repeat;
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="14" height="14" viewBox="0 0 14 14">  <defs>    <style>      .cls-1 {        fill: %23f8615a;        fill-rule: evenodd;      }    </style>  </defs>  <path d="M11.601,9.123 C10.917,9.123 10.303,9.415 9.866,9.883 L4.765,7.342 C4.782,7.223 4.794,7.102 4.794,6.978 C4.794,6.856 4.783,6.738 4.766,6.622 L9.860,4.109 C10.297,4.580 10.915,4.876 11.601,4.876 C12.925,4.876 13.998,3.784 13.998,2.438 C13.998,1.091 12.925,0.000 11.601,0.000 C10.278,0.000 9.205,1.091 9.205,2.438 C9.205,2.559 9.216,2.677 9.233,2.793 L4.139,5.306 C3.702,4.835 3.085,4.540 2.398,4.540 C1.074,4.540 0.001,5.631 0.001,6.978 C0.001,8.324 1.074,9.415 2.398,9.415 C3.082,9.415 3.696,9.123 4.133,8.656 L9.234,11.196 C9.217,11.315 9.205,11.436 9.205,11.561 C9.205,12.907 10.278,13.998 11.601,13.998 C12.925,13.998 13.998,12.907 13.998,11.561 C13.998,10.214 12.925,9.123 11.601,9.123 Z" class="cls-1"/></svg>') center no-repeat;
     width: 14px;
     height: 14px;
 }
@@ -32,7 +32,7 @@
 @mixin svg-icon-arrow-left {
 	display: inline-block;
 	vertical-align: middle;
-    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="15" height="24" viewBox="0 0 15 24">  <defs>    <style>      .cls-1 {        fill: #999;        fill-rule: evenodd;      }    </style>  </defs>  <path d="M12.162,-0.000 L15.000,2.799 L5.676,12.000 L15.000,21.200 L12.162,24.000 L0.000,12.000 L12.162,-0.000 Z" class="cls-1"/></svg>') center no-repeat;
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="15" height="24" viewBox="0 0 15 24">  <defs>    <style>      .cls-1 {        fill: %23999;        fill-rule: evenodd;      }    </style>  </defs>  <path d="M12.162,-0.000 L15.000,2.799 L5.676,12.000 L15.000,21.200 L12.162,24.000 L0.000,12.000 L12.162,-0.000 Z" class="cls-1"/></svg>') center no-repeat;
     width: 15px;
     height: 24px;
 }
@@ -40,15 +40,23 @@
 @mixin svg-icon-arrow-right {
 	display: inline-block;
 	vertical-align: middle;
-    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="15" height="24" viewBox="0 0 15 24">  <defs>    <style>      .cls-1 {        fill: #999;        fill-rule: evenodd;      }    </style>  </defs>  <path d="M2.838,-0.000 L0.000,2.799 L9.324,12.000 L0.000,21.200 L2.838,24.000 L15.000,12.000 L2.838,-0.000 Z" class="cls-1"/></svg>') center no-repeat;
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="15" height="24" viewBox="0 0 15 24"><defs><style>.cls-1{fill: %23999;fill-rule: evenodd;}</style></defs><path d="M2.838,-0.000 L0.000,2.799 L9.324,12.000 L0.000,21.200 L2.838,24.000 L15.000,12.000 L2.838,-0.000 Z" class="cls-1"/></svg>') center no-repeat;
     width: 15px;
     height: 24px;
+}
+
+@mixin svg-icon-arrow-left-red {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="15" height="24" viewBox="0 0 15 24">  <defs>    <style>      .cls-1 {        fill: %23f8615a;        fill-rule: evenodd;      }    </style>  </defs>  <path d="M12.162,-0.000 L15.000,2.799 L5.676,12.000 L15.000,21.200 L12.162,24.000 L0.000,12.000 L12.162,-0.000 Z" class="cls-1"/></svg>');
+}
+
+@mixin svg-icon-arrow-right-red {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="15" height="24" viewBox="0 0 15 24">  <defs>    <style>      .cls-1 {        fill: %23f8615a;        fill-rule: evenodd;      }    </style>  </defs>  <path d="M2.838,-0.000 L0.000,2.799 L9.324,12.000 L0.000,21.200 L2.838,24.000 L15.000,12.000 L2.838,-0.000 Z" class="cls-1"/></svg>');
 }
 
 @mixin svg-icon-check {
 	display: inline-block;
 	vertical-align: middle;
-    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="15.969" height="12" viewBox="0 0 15.969 12"><defs><style>.cls-1 {fill: #f8615a; fill-rule: evenodd; }</style></defs><path d="M0.184,6.599 C0.061,6.479 -0.000,6.299 -0.000,6.179 C-0.000,6.059 0.061,5.879 0.184,5.759 L1.045,4.919 C1.290,4.679 1.659,4.679 1.905,4.919 L1.966,4.979 L5.346,8.519 C5.469,8.639 5.653,8.639 5.776,8.519 L14.011,0.179 L14.072,0.179 L14.072,0.179 L14.072,0.179 C14.318,-0.061 14.687,-0.061 14.932,0.179 L15.793,1.019 C16.038,1.259 16.038,1.619 15.793,1.859 L15.793,1.859 L15.793,1.859 L5.961,11.819 C5.838,11.939 5.715,11.999 5.530,11.999 C5.346,11.999 5.223,11.939 5.100,11.819 L0.307,6.779 L0.184,6.599 Z" class="cls-1"/></svg>') center no-repeat;
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="15.969" height="12" viewBox="0 0 15.969 12"><defs><style>.cls-1 {fill: %23f8615a; fill-rule: evenodd; }</style></defs><path d="M0.184,6.599 C0.061,6.479 -0.000,6.299 -0.000,6.179 C-0.000,6.059 0.061,5.879 0.184,5.759 L1.045,4.919 C1.290,4.679 1.659,4.679 1.905,4.919 L1.966,4.979 L5.346,8.519 C5.469,8.639 5.653,8.639 5.776,8.519 L14.011,0.179 L14.072,0.179 L14.072,0.179 L14.072,0.179 C14.318,-0.061 14.687,-0.061 14.932,0.179 L15.793,1.019 C16.038,1.259 16.038,1.619 15.793,1.859 L15.793,1.859 L15.793,1.859 L5.961,11.819 C5.838,11.939 5.715,11.999 5.530,11.999 C5.346,11.999 5.223,11.939 5.100,11.819 L0.307,6.779 L0.184,6.599 Z" class="cls-1"/></svg>') center no-repeat;
     width: 16px;
     height: 12px;
 }
