--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -84,11 +84,22 @@
         &__bottom {
             padding: 0;
         }
+        &__get-offer {
+            font-size: 14px;
+        }
+        &__entry,
+        &__warranty {
+            font-size: 12px;
+        }
     }
     .navbar_sidebar .navbar-nav>.menu-item>a {
         padding-top: 5px;
         padding-bottom: 5px;
         line-height: 1;
+        font-size: 12px;
+    }
+    .footer .nav_footer {
+        font-size: 12px;
     }
 }
 
@@ -274,10 +285,10 @@
         font-size: 30px;
         transition: transform .5s 0s;
         transform: rotate(0deg);
-        &:hover{
-	        color: $red;
-        	text-decoration: none;
-        	transform: rotate(360deg);
+        &:hover {
+            color: $red;
+            text-decoration: none;
+            transform: rotate(360deg);
         }
     }
 }
