--- a/css/_tpl-sliders.scss
+++ b/css/_tpl-sliders.scss
@@ -25,7 +25,7 @@
 }
 
 .clients-slider {
-    padding: 50px 0 70px;
+    padding: 30px 0;
     position: relative;
     &__bg {
         background: url('../img/bg-clients.jpg') 0 0 repeat;
